p2/k8s/app1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1
  namespace: webapps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app1
  template:
    metadata:
      labels:
        app: app1
    spec:
      containers:
        - name: echo
          image: ealen/echo-server:latest
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: app1
  namespace: webapps
spec:
  selector:
    app: app1
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
