p2/k8s/app3.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app3
  namespace: webapps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app3
  template:
    metadata:
      labels:
        app: app3
    spec:
      containers:
        - name: echo
          image: ealen/echo-server:latest
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: app3
  namespace: webapps
spec:
  selector:
    app: app3
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
