p2/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapps-ingress
  namespace: webapps
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: app1.192.168.56.110.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app1
                port:
                  number: 80
    - host: app2.192.168.56.110.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app2
                port:
                  number: 80
    - host: app3.192.168.56.110.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app3
                port:
                  number: 80
